<resources>
    <string name="app_name">FinanceOverview</string>
    <string name="search_results">Search Results</string>
    <string name="search_hint">enter search term (e.g. stock symbol)</string>
    <string name="search">Search</string>
    <string name="number_of_shares_owned">Number of shares owned:</string>
    <string name="add_shares_to_portfolio">Store number of shares</string>
    <string name="dummy_stock_name_dsn">dummy stock name (DSN)</string>
    <string name="dummy_stock_price">1223.92</string>
    <string name="error_message">Failed to get results. Please try again.</string>
    <string name="no_network_search">No active network connection. Searching for assets failed.</string>
    <string name="no_network_details">No active network connection. Getting details for asset failed.</string>
    <string name="no_search_result">No results found.</string>
    <string name="number_of_shares_dummy">123.2</string>
    <string name="number_of_shares_label">Number of shares owned:</string>
    <string name="dummy_stock_symbol">DSN</string>
    <string name="stock_name">Stock name:</string>
    <string name="stock_symbol">Stock symbol:</string>
    <string name="stock_price">Price:</string>
    <string name="stock_region">Region:</string>
    <string name="dummy_region">Xetra</string>
    <string name="dummy_currency">USD</string>
    <string name="current_price_label">Current price:</string>
    <string name="search_for_stocks_content_description">Search for stocks</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Portfolio Overview</string>
    <string name="no_details_for_stock">No details for this stock available. \nYou may only make 5 requests per minute, please wait shortly until you can access more information.\nIf information is not updated there simple is non available.</string>
    <string name="add_stock_help">To add a stock, click on the + button on the bottom right of the screen.</string>
    <string name="portfolio_value">Portfolio Value:</string>
</resources>