<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/portfolio_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_stock_name_dsn"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_stock_price"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_of_shares_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/number_of_shares_owned_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_shares_dummy"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_price_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/current_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_stock_price"
            android:textSize="12sp"
            android:paddingEnd="2dp"/>
        <TextView
            android:id="@+id/currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_currency"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>